public/assets/css/adminstyle.css
@import url('https://fonts.googleapis.com/css2?family=Kotta+One&family=Lora:wght@400;500;600&family=Merriweather:wght@300;400;900&display=swap');

:root {
    --bs-primary-rgb: 255, 244, 226;
    --bs-primary: #FFF4E2;
    --bs-secondary-rgb: 245, 86, 81;
    --bs-secondary:#f55651;
    --bs-light-rgb:255, 251, 245;
    --bs-light:#fffbf5;
    --bs-dark-rgb: 77, 60, 60;
    --bs-dark:#4d3c3c;
    --primary-color: #FFF4E2;
    --secondary-color: #F55651;
    --light-color: #FFFBF5;
    --dark-color: #4D3C3C;
    --admin-color: #6F4494;

    --header-font: 'Kotta One', serif;
    --text-font: 'Lora', serif;
    --title-font: 'Merriweather', serif;

    --font-size: 16px;
    --header-font-size: 96px;
    --title-font-size: 36px;

    --spacing: 8px;
}

* {
    font-family: var(--text-font);
    font-size: var(--font-size);
}

.btn {
    background-color: var(--admin-color);
    color: var(--light-color);
    margin-top: var(--spacing);
}

.btn:hover {
    color: var(--light-color);
    background-color: var(--secondary-color);
}

label {
    padding-top: var(--spacing);
}

.addClothTitle {
    font-size: var(--title-font-size);
    font-family: var(--title-font);
    padding: var(--spacing)
}

.list-group-item:hover {
    transform: scale(1.03);
}

.svg {
    margin-right:var(--spacing)
}

